--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "redis": "^4.2.0"
+    "redis": "^4.2.0",
     "helmet": "^5.1.1"
   }
 }
