--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "redis": "^4.2.0",
-    "helmet": "^5.1.1"
+    "helmet": "^5.1.1",
+    "mongoose": "^6.5.2",
+    "redis": "^4.2.0"
   }
 }
