--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "2dgamebackend-alfa",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
