--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "helmet": "^5.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "redis": "^4.2.0"
   },
